--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 		<textarea style="resize:none; border: none" readonly rows="1" cols="10">Board Id</textarea><br/>
 		<textarea style="resize:none" id='userId' rows="1" cols="10">User</textarea>
 		<textarea  style="resize:none" id='boarId' rows="1" cols="10">rp</textarea><br/>
-		<button id="led" onclick="led()">led</button>
+		<button id="led1" onclick="led1()">led</button>
+		<button id="led2" onclick="led2()">led</button>
 		<h1 id="led_state">off</h1>
-		<h1>sensor</h1>
-		<h1 id="sensor_val">0</h1>
 		<!-- mosquitto MQTT -------------------------------------------------------------------->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 		<!-- jQuery ---------------------------------------------------------------------------->
@@ -85,7 +84,13 @@
   }
 
     // called when a message arrives
-  function led() {
+  function led1() {
+    boarId=document.getElementById("boarId").value;
+	userIdId=document.getElementById("userId").value;
+	
+    sendMessage(userId+boarId+':led_state:0')
+  }
+  function led2() {
     boarId=document.getElementById("boarId").value;
 	userIdId=document.getElementById("userId").value;
 	
