--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		<textarea style="resize:none" id='userId' rows="1" cols="10">User</textarea>
 		<textarea  style="resize:none" id='boarId' rows="1" cols="10">rp</textarea><br/>
 		<button id="led1" onclick="led1()">led</button>
+		<h1 id="led_state1">off</h1>
 		<button id="led2" onclick="led2()">led</button>
-		<h1 id="led_state">off</h1>
+		<h1 id="led_state2">off</h1>
 		<!-- mosquitto MQTT -------------------------------------------------------------------->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 		<!-- jQuery ---------------------------------------------------------------------------->
@@ -88,13 +89,13 @@
     boarId=document.getElementById("boarId").value;
 	userIdId=document.getElementById("userId").value;
 	
-    sendMessage(userId+boarId+':led_state:0')
+    sendMessage(userId+boarId+':led_state1:0')
   }
   function led2() {
     boarId=document.getElementById("boarId").value;
 	userIdId=document.getElementById("userId").value;
 	
-    sendMessage(userId+boarId+':led_state:0')
+    sendMessage(userId+boarId+':led_state2:0')
   }
   // called when a message arrives
   myName='leo'
@@ -109,7 +110,11 @@
 		switch(f) {
 		  case 'led_state':
 			led_state=v;
-			document.getElementById("led_state").innerHTML=led_state;
+			document.getElementById("led_state").innerHTML=led_state1;
+			break;
+		  case 'led_state2':
+			led_state=v;
+			document.getElementById("led_state").innerHTML=led_state2;
 			break;
 		  case 'sensor_val':
 			sensor_val=v;
