--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 	userId=document.getElementById("userId").value;
 	if(boarId+userId==n){
 		switch(f) {
-		  case 'led_state':
-			led_state=v;
+		  case 'led_state1':
+			led_state1=v;
 			document.getElementById("led_state").innerHTML=led_state1;
 			break;
 		  case 'led_state2':
-			led_state=v;
+			led_state2=v;
 			document.getElementById("led_state").innerHTML=led_state2;
 			break;
 		  case 'sensor_val':
