--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<textarea style="resize:none; border: none" readonly rows="1" cols="10">Board Id</textarea><br/>
 		<textarea style="resize:none" id='userId' rows="1" cols="10">User</textarea>
 		<textarea  style="resize:none" id='boarId' rows="1" cols="10">rp</textarea><br/>
-		<button id="led1" onclick="led1()">led</button>
+		<button id="led1" onclick="led1()">led1</button>
 		<h1 id="led_state1">off</h1>
-		<button id="led2" onclick="led2()">led</button>
+		<button id="led2" onclick="led2()">led2</button>
 		<h1 id="led_state2">off</h1>
 		<!-- mosquitto MQTT -------------------------------------------------------------------->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
