--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
   }
   // called when a message arrives
   myName='leo'
-  led_state=true
+  led_state1=true
+  led_state2=true
   function doAction(msg) {
     n=msg.split(":")[0];
 	f=msg.split(":")[1];
