--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 		<textarea style="resize:none; border: none" readonly rows="1" cols="10">Board Id</textarea><br/>
 		<textarea style="resize:none" id='userId' rows="1" cols="10">User</textarea>
 		<textarea  style="resize:none" id='boarId' rows="1" cols="10">rp</textarea><br/>
-		<button id="led1" onclick="led1()">led1</button>
-		<h1 id="led_state1">off</h1>
-		<button id="led2" onclick="led2()">led2</button>
-		<h1 id="led_state2">off</h1>
+		<button id="led" onclick="led()">led1</button>
+		<h1 id="led_state">off</h1>
 		<!-- mosquitto MQTT -------------------------------------------------------------------->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 		<!-- jQuery ---------------------------------------------------------------------------->
@@ -85,22 +83,15 @@
   }
 
     // called when a message arrives
-  function led1() {
+  function led() {
     boarId=document.getElementById("boarId").value;
 	userIdId=document.getElementById("userId").value;
 	
-    sendMessage(userId+boarId+':led_state1:0')
-  }
-  function led2() {
-    boarId=document.getElementById("boarId").value;
-	userIdId=document.getElementById("userId").value;
-	
-    sendMessage(userId+boarId+':led_state2:0')
+    sendMessage(userId+boarId+':led_state:0')
   }
   // called when a message arrives
   myName='leo'
-  led_state1=true
-  led_state2=true
+  led_state=true
   function doAction(msg) {
     n=msg.split(":")[0];
 	f=msg.split(":")[1];
@@ -109,13 +100,9 @@
 	userId=document.getElementById("userId").value;
 	if(boarId+userId==n){
 		switch(f) {
-		  case 'led_state1':
+		  case 'led_state':
 			led_state1=v;
-			document.getElementById("led_state").innerHTML=led_state1;
-			break;
-		  case 'led_state2':
-			led_state2=v;
-			document.getElementById("led_state").innerHTML=led_state2;
+			document.getElementById("led_state").innerHTML=led_state;
 			break;
 		  case 'sensor_val':
 			sensor_val=v;
