--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   var options = {
     useSSL: true,
     userName: "botstbxk",
-    password: "Astr1UnF8IUk",
+    password: "bDKSMnTpsSoO",
     onSuccess:onConnect,
     onFailure:doFail
   }
