--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<textarea style="resize:none; border: none" readonly rows="1" cols="10">Board Id</textarea><br/>
 		<textarea style="resize:none" id='userId' rows="1" cols="10">User</textarea>
 		<textarea  style="resize:none" id='boarId' rows="1" cols="10">rp</textarea><br/>
-		<button onclick="led()">led1</button>
+		<button id="led" onclick="led()">led1</button>
 		<h1 id="led_state">off</h1>
 		<h1>sensor</h1>
 		<h1 id="sensor_val">0</h1>
@@ -96,8 +96,8 @@
      document.getElementById("led_state").innerHTML =msg;   
      }
   // called when a message arrives
-  myName='leo'
-  led_state=true
+  myName='leo';
+  led_state=0;
   function doAction(msg) {
         n=msg.split(":")[0];
 	f=msg.split(":")[1];
